--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -224,6 +224,23 @@ img {
   grid-template-columns: repeat(3, 1fr);
   gap: 2rem;
 }
+/* Add this CSS code */
+
+.animate {
+  opacity: 0;
+  animation: fadeIn 0.5s ease-in-out forwards;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+    transform: translateY(-10px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
 .nav__link{
   display: flex;
   flex-direction: column;
@@ -255,7 +272,6 @@ img {
   bottom: 0;
 }
   
-
 /* Active link */
 .active-link{
    color: var(--first-color);
@@ -287,12 +303,29 @@ img {
 .home__social-icon.hover{
   color: var(--first-color-alt);
 }
+.home__img {
+  position: relative;
+  animation: move 6s infinite ease-in-out;
+}
+@keyframes move {
+  0% {
+    top: -.5cm;
+  }
+  50% {
+    top: .5cm;
+  }
+  100% {
+    top: -.5cm;
+  }
+}
 .home__blob{
   width: 200px;
   fill: var(--first-color);
 }
 .home__blob-img{
-  width: 170px;
+  width: 150px;
+  /* width: 330px; 
+  transform: rotate(-5deg); */
 }
 .home__data{
     grid-column: 1/3;
@@ -873,7 +906,7 @@ img {
 /*========== SCROLL UP ==========*/
 .scrollup{
   position: fixed;
-  right: 1rem;
+  right: 2rem;
   bottom: -20%;
   background-color: var(--first-color);
   opacity: .8;
