--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -935,12 +935,12 @@ img {
   border-radius: .5rem;
 }
 ::-webkit-scrollbar-thumb{
-  background-color: var(--scroll-thumb-color);
+  background-color: var(--first-color);
   border-radius: .5rem;
 }
-::-webkit-scrollbar-thumb:hover{
-  background-color: var(--text-color-light);
-}
+/* ::-webkit-scrollbar-thumb:hover{
+  background-color: var(--first-color);
+} */
 
 /*==================== MEDIA QUERIES ====================*/
 /* For small devices */
